# Software_engineering_cours

./: .gitignore  .releaserc  CMakeLists.txt  Dockerfile  HelloProjConfig.h.in  README.md  hello_world.cpp
.github/workflows/: cd.yml  clang-format.yml  docker-publish.yml
cmake/: HelloProjConfig.h.in
include/basic/: message.h
mains/: CMakeLists.txt  hello.cpp
src/basic/: CMakeLists.txt  message.cpp
tests/: CMakeLists.txt  test-hello.cpp  test-version.cpp
